style.css
* {background-color: rgb(117, 49, 49);
    color: blanchedalmond;}

h1, h2 {
    text-align: center;
    font-family: "Lobster Two", sans-serif;
    font-weight: 400;
    font-style: normal;
}

p, h3, h4, li {
    font-family: "Quintessential", serif;
    font-weight: 400;
    font-style: normal;
}

h3 i {
    text-align: center;
}

img {
  display: block; 
  margin: 0 auto; 
  width: 30%;
}

nav {
    overflow: hidden;
}

nav a {
    font-family: "Quintessential", serif;
    float: left;
    background-color: bisque;
    color: maroon;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

nav a:hover {
    background-color: maroon;
    color: bisque;
}

nav a.active {
    background-color: #3f0c02;
    color: bisque;
}

.card {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    width: 40%;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.container {
    padding: 2px 16px;
}

